# kafka-rs-tool

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  kafka_client.rs  main.rs
