[package]
name = "kafka-rs"
version = "0.1.0"
authors = ["Michael Howard <michael.howard.h@gmail.com>"]
edition = "2018"

[dependencies]
kafka = "0.8"
crossbeam-channel = "0.4"
ctrlc = "3.1.3"
whoami = "0.7.0"
dirs = "2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
